--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,4 +1,4 @@
-body div.container section.filters{
+.filters{
     background-color: white;
     height: 70px;
     width: 100%;
@@ -8,7 +8,7 @@ body div.container section.filters{
     align-items: center;
 }
 
-body div.container section.filters button{
+button{
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
@@ -20,6 +20,6 @@ body div.container section.filters button{
     float: right;
 }
 
-body div.container section.filters button:hover {
+button:hover {
     opacity: 0.9;
 }
